Bug 294010 - Help button on protocol selection page does nothing
Summary: Help button on protocol selection page does nothing
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: 0.3.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-13 18:36 UTC by Philip Muškovac
Modified: 2012-08-07 13:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Muškovac 2012-02-13 18:36:53 UTC
Version:           0.3 (using KDE 4.8.0) 
OS:                Linux

When adding a new account, the 'Help' button on the protocol selection page does nothing when clicked.

Reproducible: Always

Steps to Reproduce:
Open account manager
Click on 'Add Account'
Click on 'Help'

Actual Results:  
Nothing happens

Expected Results:  
khelpcenter opens

OS: Linux (x86_64) release 3.2.0-15-generic
Compiler: gcc
Comment 1 Daniele E. Domenichelli 2012-08-07 13:43:25 UTC
Git commit cf63660b326b9e71f36c4d0e2863fd516aa15a15 by Daniele E. Domenichelli.
Committed on 07/08/2012 at 14:41.
Pushed by ddomenichelli into branch 'master'.

Do not show help button in AddAccountAssistant
FIXED-IN: 0.5

M  +3    -0    src/add-account-assistant.cpp

http://commits.kde.org/telepathy-accounts-kcm/cf63660b326b9e71f36c4d0e2863fd516aa15a15