Do not show help button in AddAccountAssistant

BUG: 294010
FIXED-IN: 0.5